--- a/src/app/references/references.component.html
+++ b/src/app/references/references.component.html
@@ -85,18 +85,18 @@
                                     </div>
                                     <div class="row">
                                         <div class="mt-3">
-                                            <h5>Random</h5>
+                                            <h5>TBD</h5>
                                         </div>
                                     </div>
                                     <div class="row">
                                         <div class="mt-2 ">
                                          
-                                            <h5><small>DevOps Engineer</small></h5>
+                                            <h5><small>TBD</small></h5>
                                         </div>
                                     </div>
                                     <div class="row">
                                         <div class="mt-2 ">
-                                            <span class="text-uppercase"><strong>Random</strong></span>
+                                            <span class="text-uppercase"><strong>TBD</strong></span>
                                         </div>
                                     </div>
                                    
