--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -35,7 +35,7 @@
                             </li>
                             <li>
                                 <fa-icon [icon]="email"></fa-icon><strong><a href="mailto:kirkfrussell@gmail.com">
-                                        kirkfrussel@gmail.com</a></strong>
+                                        kirkfrussell@gmail.com</a></strong>
                             </li>
                        
                         </ul>
