--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -35,7 +35,7 @@
 
                     <li class="nav-item p-1 rounded">
                         <a class="nav-link js-scroll-trigger smooth-scroll text-uppercase" href="#references"><i
-                                class='bx bxs-badge-check'></i> Recommandations</a>
+                                class='bx bxs-badge-check'></i> Recommendations</a>
                     </li>
 
                     <li class="nav-item p-1 rounded">
